# DRL-Trader-Agent

./: .gitignore  README.md  data_fixer.py  get_crypto_data.py  pyproject.toml  rule_based.py  test.py  train.py
agent/: NetworkBuilder.py  helper.py
data/bist/: AKBNK_15dk.csv  AKBNK_240dk.csv  AKBNK_30dk.csv  AKBNK_60dk.csv  THYAO_15dk.csv  THYAO_240dk.csv  THYAO_30dk.csv  THYAO_60dk.csv  THYAO_G.csv  adel-hourly.csv
data/crypto/: BTCUSDT_4h.csv  ETHUSDT_4h.csv  SOLUSDT_4h.csv  XRPUSDT_4h.csv
data/yabanci/: aapl.csv
environment/: callbacks.py  data_feeder.py  indicators.py  metrics.py  render.py  reward.py  scalers.py  state.py  strategies.py  trading_env.py
